# censored-falsification

./: README.md  pyproject.toml  run_mmr.py
config/: default.yaml
config/censoring_model/: conditional_censoring.yaml  mmr_drop.yaml  mmr_impute.yaml  unconditional_censoring.yaml
config/censoring_type/: dep_x.yaml  global.yaml  indep_x.yaml  no_censoring.yaml  type1_dep_x.yaml  type1_indep_x.yaml
config/data/: ihdp.yaml  ihdp_non_concordant.yaml
config/event_model/: aft.yaml  conditional_event.yaml
config/experiment/: mmr.yaml  mmr_drop.yaml  type1_indep_x.yaml
config/model/: censoring_default.yaml  conditional_censoring.yaml  defaults.yaml  event_default.yaml  mmr.yaml  propensity_default.yaml  response_surface_default.yaml  selection_default.yaml  unconditional_censoring.yaml
config/oracle/: oracle.yaml
data/: DataModule.py  DataModule_old.py
experiments_old/: simulation_mmr.py
experiments_old/mmr_results/type1-error/: mmr-contrast.csv
models_mmr_old/: estimator_mmr.py
notebooks/: results.ipynb  survival_curves.ipynb
src/: DataModule.py  __init__.py
src/estimators/: models.py
src/models/: estimator_mmr.py  falsifier_mmr.py  mmr.py  model_util.py
